@@ -17,6 +17,14 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>false</skip>
+                    <workingDirectory>${project.parent.basedir}</workingDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <configuration>
@@ -178,6 +186,18 @@
                         </configuration>
                         <executions>
                             <execution>
+                                <id>tutorial</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>-ea</argument>
+                                        <argument>io.github.jbellis.jvector.example.tutorial.TutorialRunner</argument>
+                                        <argument>${tutorial}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
                                 <id>sift</id>
                                 <goals>
                                     <goal>exec</goal>
@@ -243,6 +263,19 @@
                             <skip>true</skip>
                         </configuration>
                         <executions>
+                            <execution>
+                                <id>tutorial</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>--add-modules=jdk.incubator.vector</argument>
+                                        <argument>-ea</argument>
+                                        <argument>io.github.jbellis.jvector.example.tutorial.TutorialRunner</argument>
+                                        <argument>${tutorial}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
                             <execution>
                                 <id>sift</id>
                                 <goals>
@@ -359,6 +392,21 @@
                             <skip>true</skip>
                         </configuration>
                         <executions>
+                            <execution>
+                                <id>tutorial</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>--enable-native-access=ALL-UNNAMED</argument>
+                                        <argument>--add-modules=jdk.incubator.vector</argument>
+                                        <argument>-ea</argument>
+                                        <argument>-Djvector.experimental.enable_native_vectorization=true</argument>
+                                        <argument>io.github.jbellis.jvector.example.tutorial.TutorialRunner</argument>
+                                        <argument>${tutorial}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
                             <execution>
                                 <id>sift</id>
                                 <goals>
